# tech-assignment-numbers-api

./: README.md  pyproject.toml
app/: main.py
app/routers/: math.py
app/utils/: number.py  numbers.py
tests/: test_math.py
