[tool.poetry]
name = "tech-assignment-numbers-api"
version = "0.1.0"
description = ""
authors = ["JedersonLuz <jedersonalpha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.1"}
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
